final fix overflow x

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,8 @@
-html {
+* {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     position: relative;
+    overflow-x: hidden;
 }
 
 /* Header */
@@ -9,7 +10,7 @@ html {
 header {
     position: fixed;
     z-index: 100;
-    width: 100%;
+    width: 97%;
     background-color: white;
     padding: 0 25px;
     top: 0;
